--- a/machmach/css/app.css
+++ b/machmach/css/app.css
@@ -1,5 +1,9 @@
 body { margin: 30px; }
 
+ul {
+	list-style: none;
+	padding: 0;
+}
 .content { 
 	margin: 0 auto; 
 	width: 800px; 
@@ -13,7 +17,7 @@ body { margin: 30px; }
 	vertical-align: top;
 }
 
-.container1 {
+.field_wrapper {
 	width: 408px;
 	height: 496px;
 	border: 1px solid black;
@@ -21,7 +25,7 @@ body { margin: 30px; }
 	background-color: #9ee0e2;
 }
 
-.container2 {
+.menu_wrapper {
 	width: 101px;
 	height: 300px;
 	margin-left: -4px;
@@ -36,7 +40,7 @@ body { margin: 30px; }
 	padding: 10px;
 }
 
-.button {
+.item {
 	background-color: white;
 	height: 32px;
 	width: 100px;
@@ -45,14 +49,14 @@ body { margin: 30px; }
 	cursor: pointer;
 }
 
-.button:hover {
+.item:hover {
 	font-weight: bold;
 	border-width: 2px;
 }
 
-.button1 {
+.sub_menu_item {
 	border: none;	
-	margin: 12px 0 0 0;
+    margin: 12px 0 0 0;
 }
 
 .maximized {
@@ -99,22 +103,22 @@ body { margin: 30px; }
 }
 
 .flip .card.flipped {
-  -webkit-transform: rotatex(-180deg);
+    -webkit-transform: rotatex(-180deg);
 }
 
 .flip .card {
-  width: 100%;
-  height: 100%;
-  -webkit-transform-style: preserve-3d;
-  -webkit-transition: 0.2s;
+	width: 100%;
+	height: 100%;
+    -webkit-transform-style: preserve-3d;
+    -webkit-transition: 0.2s;
 }
 
 .flip .card .face {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  -webkit-backface-visibility: hidden ;
-  z-index: 2;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    -webkit-backface-visibility: hidden ;
+    z-index: 2;
     font-family: Georgia;
     font-size: 3em;
     text-align: center;
@@ -122,15 +126,15 @@ body { margin: 30px; }
 }
 
 .flip .card .front {
-  position: absolute;
-  z-index: 1;
+    position: absolute;
+    z-index: 1;
     background: black;
     color: white;
     cursor: pointer;
 }
 
 .flip .card .back {
-  -webkit-transform: rotatex(-180deg);
+    -webkit-transform: rotatex(-180deg);
     background: blue;
     background: white;
     color: black;
